@@ -1,3 +1,8 @@
+2020-12-11 Riccardo Mottola <rm@gnu.org>
+
+	* Source/GSToolbarView.m,
+	Use centerScanRect to correct Items frame and avoid flickering.
+
 2020-12-06 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSToolbarFrameworkPrivate.h,
@@ -10,10 +15,9 @@
 	* Source/NSMenuView.m (-mouseDown:): Protect against _window going
 	away during tracking.
 
-2020-11-23 Riccardo <rm@gnu.org>
+2020-11-23 Riccardo Mottola <rm@gnu.org>
 	* Source/NSPopUpButtonCell.m (release):
 	Use standard setMenu: in release and avoid leaking the Menu. (Proposed by Fred)
-
 
 2020-11-03 Riccardo Mottola <rm@gnu.org>
 
